tests/error/type_match/if_expr_ambiguous_types.bz
// error: matching the two branches of the if expression to type 'auto' is ambiguous
// note: resulting type from matching the then branch is 'int32'
// note: resulting type from matching the else branch is 'int16'
function test(b: bool)
{
	let _ = if (b) {
		0
	} else {
		1i16
	};
}
